# audio-fingerprinter

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
src/audio_fingerprinter/: main.py
src/audio_fingerprinter.egg-info/: SOURCES.txt  requires.txt
tests/: conftest.py  test_fingerprinter.py  test_fingerprinting.py
